# learnSP1Example

./: Cargo.toml
aggregation/program/: Cargo.toml
aggregation/program/elf/: riscv32im-succinct-zkvm-elf
aggregation/program/src/: main.rs
aggregation/script/src/: main.rs
fibonacci/program/: Cargo.toml
fibonacci/program/elf/: riscv32im-succinct-zkvm-elf
patch-testing/program/: Cargo.toml
patch-testing/program/src/: main.rs
