[workspace]
members = [
  "aggregation/script",
  "chess/script",
  "cycle-tracking/script",
  "fibonacci/script",
  "io/script",
  "is-prime/script",
  "json/lib",
  "json/script",
  "regex/script",
  "rsa/script",
  "ssz-withdrawals/script",
  "tendermint/script",
  "patch-testing/script",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"

[workspace.dependencies]
sp1-build = { version = "2.0.0"}
sp1-derive = { version = "2.0.0" }
sp1-core-executor = { version = "2.0.0" }
sp1-core-machine = { version = "2.0.0" }
sp1-cli = { version = "2.0.0", default-features = false }
sp1-eval = { version = "2.0.0", default-features = false }
sp1-helper = { version = "2.0.0", default-features = false }
sp1-primitives = { version = "2.0.0" }
sp1-prover = { version = "2.0.0" }
sp1-recursion-compiler = { version = "2.0.0" }
sp1-recursion-core = { version = "2.0.0", default-features = false }
sp1-recursion-derive = { version = "2.0.0", default-features = false }
sp1-recursion-gnark-ffi = { version = "2.0.0", default-features = false }
sp1-recursion-program = { version = "2.0.0", default-features = false }
sp1-recursion-circuit = { version = "2.0.0", default-features = false }
sp1-sdk = { version = "2.0.0" }
sp1-lib = { version = "2.0.0", default-features = false }
sp1-zkvm = { version = "2.0.0", default-features = false }
